--- a/ML/knn.html
+++ b/ML/knn.html
@@ -15,7 +15,7 @@
 
 <body>
     <canvas id = "canvas" width="400" height="400"></canvas>
-    <script type="text/javascript" src="knntest.js"></script>
+    <script type="text/javascript" src="knn.js"></script>
 </body>
 </html>
 
