Changed the UI for the bot interface
- Added CSS rules to app.css
- removed <label> above text input in html

Signed-off-by: AkhilHector <akhilhector.1@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,12 @@
   <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-  <div id="contentParent" class="responsive-columns-wrapper">
-    <div id="chat-column-holder" class="responsive-column content-column">
+  <div id="contentParent">
+    <div id="chat-column-holder">
       <div class="chat-column">
         <div id="scrollingChat"></div>
-        <label for="textInput" class="inputOutline">
-          <input id="textInput" class="input responsive-column"
+        <label for="textInput">
+          <input id="textInput"
             placeholder="Have something to ask ?" type="text"
             onkeydown="ConversationPanel.inputKeyDown(event, this)">
         </label>
