--- a/public/index.html
+++ b/public/index.html
@@ -13,25 +13,22 @@
   <title>home | felix</title>
   
   <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-  <div id="contentParent">
-    <div id="chat-column-holder">
+  <div id="contentParent" class="responsive-columns-wrapper">
+    <div id="chat-column-holder" class="responsive-column content-column">
       <div class="chat-column">
         <div id="scrollingChat"></div>
-        <label for="textInput">
-          <input id="textInput"
+        <label for="textInput" class="inputOutline">
+          <input id="textInput" class="input responsive-column"
             placeholder="Have something to ask ?" type="text"
             onkeydown="ConversationPanel.inputKeyDown(event, this)">
         </label>
+	<button class="upload"><i class="material-icons">assessment</i></button>
+	<button class="volume"><i class="material-icons">mic</i></button>
       </div>
-    </div>
-    <div id="payload-column" class="fixed-column content-column">
-      <div id="payload-initial-message">
-        Type something to see the output
-      </div>
-      <div id="payload-request" class="payload"></div>
-      <div id="payload-response" class="payload"></div>
     </div>
   </div>
 
